[java] [playground] add benchmark